@@ -1,0 +1,13 @@
+generator: already installed, replacing
+stashing as generator:0
+transient: already installed, replacing
+stashing as transient:0
+transient: already installed, replacing
+stashing as transient:0
+default plugins
+somelt clone
+tst
+a ..
+.. is mytype
+r ..
+.. is element
