@@ -22,3 +22,4 @@
 =====
 * improve error handling
 * more portable tests (denoise)
+* improve python ELEMENT access
